run_instances/mypy_fail2pass_check/gold/fmt/fmtlib__fmt-1361/test_output_prev_apply.txt
+ cd /testbed
+ git checkout a5abe5d95cb8a8015913be9748a9661f3e1fbda8 test/format-impl-test.cc test/grisu-test.cc
Updated 2 paths from 89bd45be
+ git apply -v -
Checking patch test/format-impl-test.cc...
Checking patch test/grisu-test.cc...
Applied patch test/format-impl-test.cc cleanly.
Applied patch test/grisu-test.cc cleanly.
+ mkdir -p build
+ cd build
+ echo 'Configuring CMake...'
+ cmake -S .. -DFMT_TEST=ON -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_STANDARD=14
Configuring CMake...
-- CMake version: 3.22.1
-- The CXX compiler identification is GNU 11.4.0
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Version: 6.0.0
-- Build type: Release
-- CXX_STANDARD: 14
-- Performing Test has_std_14_flag
-- Performing Test has_std_14_flag - Success
-- Performing Test has_std_1y_flag
-- Performing Test has_std_1y_flag - Success
-- Performing Test SUPPORTS_VARIADIC_TEMPLATES
-- Performing Test SUPPORTS_VARIADIC_TEMPLATES - Success
-- Performing Test SUPPORTS_USER_DEFINED_LITERALS
-- Performing Test SUPPORTS_USER_DEFINED_LITERALS - Success
-- Performing Test FMT_HAS_VARIANT
-- Performing Test FMT_HAS_VARIANT - Success
-- Looking for open
-- Looking for open - found
-- Looking for strtod_l
-- Looking for strtod_l - found
-- Target 'doc' disabled (requires doxygen)
-- Looking for C++ include pthread.h
-- Looking for C++ include pthread.h - found
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD - Success
-- Found Threads: TRUE  
-- Performing Test HAVE_FNO_DELETE_NULL_POINTER_CHECKS
-- Performing Test HAVE_FNO_DELETE_NULL_POINTER_CHECKS - Success
-- FMT_PEDANTIC: OFF
-- Looking for a CUDA compiler
-- Looking for a CUDA compiler - NOTFOUND
-- Configuring done
-- Generating done
-- Build files have been written to: /testbed/build
Building the project...
+ cmake_config_rc=0
+ '[' 0 -ne 0 ']'
+ echo 'Building the project...'
+ cmake --build .
[  1%] Building CXX object CMakeFiles/fmt.dir/src/format.cc.o
[  3%] Building CXX object CMakeFiles/fmt.dir/src/posix.cc.o
[  5%] Linking CXX static library libfmt.a
[  5%] Built target fmt
[  7%] Building CXX object test/CMakeFiles/gmock.dir/gmock-gtest-all.cc.o
[  9%] Linking CXX static library libgmock.a
[  9%] Built target gmock
[ 11%] Building CXX object test/CMakeFiles/test-main.dir/test-main.cc.o
[ 13%] Building CXX object test/CMakeFiles/test-main.dir/gtest-extra.cc.o
[ 15%] Building CXX object test/CMakeFiles/test-main.dir/util.cc.o
[ 17%] Linking CXX static library libtest-main.a
[ 17%] Built target test-main
[ 19%] Building CXX object test/CMakeFiles/assert-test.dir/assert-test.cc.o
[ 21%] Linking CXX executable ../bin/assert-test
[ 21%] Built target assert-test
[ 23%] Building CXX object test/CMakeFiles/chrono-test.dir/chrono-test.cc.o
[ 25%] Linking CXX executable ../bin/chrono-test
[ 25%] Built target chrono-test
[ 27%] Building CXX object test/CMakeFiles/color-test.dir/color-test.cc.o
[ 29%] Linking CXX executable ../bin/color-test
[ 29%] Built target color-test
[ 31%] Building CXX object test/CMakeFiles/core-test.dir/core-test.cc.o
[ 33%] Linking CXX executable ../bin/core-test
[ 33%] Built target core-test
[ 35%] Building CXX object test/CMakeFiles/grisu-test.dir/grisu-test.cc.o
[ 37%] Linking CXX executable ../bin/grisu-test
[ 37%] Built target grisu-test
[ 39%] Building CXX object test/CMakeFiles/gtest-extra-test.dir/gtest-extra-test.cc.o
[ 41%] Linking CXX executable ../bin/gtest-extra-test
[ 41%] Built target gtest-extra-test
[ 43%] Building CXX object test/CMakeFiles/format-test.dir/format-test.cc.o
[ 45%] Linking CXX executable ../bin/format-test
[ 45%] Built target format-test
[ 47%] Building CXX object test/CMakeFiles/format-impl-test.dir/format-impl-test.cc.o
/testbed/test/format-impl-test.cc: In member function 'virtual void FPTest_ComputeFloatBoundaries_Test::TestBody()':
/testbed/test/format-impl-test.cc:246:7: error: 'class fmt::v6::internal::fp' has no member named 'compute_float_boundaries'; did you mean 'compute_boundaries'?
  246 |     v.compute_float_boundaries(lower, upper);
      |       ^~~~~~~~~~~~~~~~~~~~~~~~
      |       compute_boundaries
gmake[2]: *** [test/CMakeFiles/format-impl-test.dir/build.make:76: test/CMakeFiles/format-impl-test.dir/format-impl-test.cc.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:433: test/CMakeFiles/format-impl-test.dir/all] Error 2
gmake: *** [Makefile:166: all] Error 2
Build failed with exit code 2. Setting OMNIGRIL_EXIT_CODE to 1 and exiting.
OMNIGRIL_EXIT_CODE=1
+ build_rc=2
+ '[' 2 -ne 0 ']'
+ echo 'Build failed with exit code 2. Setting OMNIGRIL_EXIT_CODE to 1 and exiting.'
+ rc=1
+ echo OMNIGRIL_EXIT_CODE=1
+ exit 1
